@@ -1,11 +1,17 @@
 package com.wilhg.lyocell.modules;
 
 import com.wilhg.lyocell.engine.JsEngine;
+import com.wilhg.lyocell.engine.ExecutionContext;
 import com.wilhg.lyocell.metrics.MetricsCollector;
+import com.wilhg.lyocell.engine.TestEngine;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Map;
+import java.util.Collections;
+
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -31,18 +37,21 @@ public class DataModuleTest {
         
         MetricsCollector collector = new MetricsCollector();
         
+        ExecutionContext.set(new ExecutionContext(42));
+        
+        TestEngine testEngine = new TestEngine(Collections.emptyList());
         // VU 1
-        try (JsEngine engine = new JsEngine(Map.of(), collector)) {
+        try (JsEngine engine = new JsEngine(Collections.emptyMap(), collector, testEngine)) {
             engine.runScript(scriptPath);
             engine.executeDefault(null);
         }
         
         // VU 2 (Should use cached data)
-        try (JsEngine engine = new JsEngine(Map.of(), collector)) {
+        try (JsEngine engine = new JsEngine(Collections.emptyMap(), collector, testEngine)) {
             engine.runScript(scriptPath);
             engine.executeDefault(null);
         }
         
-        assertEquals(2, collector.getCounterValue("checks.pass"));
+        assertEquals(2L, collector.getCounterValue("checks.pass"));
     }
 }
